fix: Zoom maps to fit data extent (auto-fit Africa)
- Changed projection from 'mercator' to {type: 'mercator', domain: data}
- Maps now automatically zoom to fit the actual data boundaries
- Eliminates excess ocean/whitespace around Africa
- All maps (Section 1.1, 1.2, 1.4) now properly zoomed in
- Much better visibility of African regions

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -317,7 +317,7 @@ s11MapData = {
         ${Plot.plot({
           width: width / 2,
           height: height,
-          projection: "mercator",
+          projection: {type: "mercator", domain: s11MapData},
           color: {
             type: useRaw ? "linear" : "categorical",
             domain: useRaw ? [0, 1] : ["Weaker", "Moderate", "Stronger"],
@@ -342,7 +342,7 @@ s11MapData = {
         ${Plot.plot({
           width: width / 2,
           height: height,
-          projection: "mercator",
+          projection: {type: "mercator", domain: s11MapData},
           color: {
             type: useRaw ? "linear" : "categorical",
             domain: useRaw ? [0, 1] : ["Weaker", "Moderate", "Stronger"],
@@ -471,7 +471,7 @@ s12MapData = {
     return Plot.plot({
       width: 2000,
       height: 1000,
-      projection: "mercator",
+      projection: {type: "mercator", domain: s12MapData},
       color: {
         type: useRaw ? "linear" : "categorical",
         domain: useRaw ? [0, 4] : ["No agreement (Very Low)", "Partial agreement (Moderate)", "High agreement (High)", "Full agreement (Very High)"],
@@ -751,7 +751,7 @@ s14MapData = {
     return Plot.plot({
       width: 2000,
       height: 1000,
-      projection: "mercator",
+      projection: {type: "mercator", domain: s14MapData},
       color: {
         type: "linear",
         domain: [0, 1],
