fix: Resolve import duplication and data type errors
- Move all UI component imports to parent file to avoid duplication
- Add proper type conversion for numeric CSV columns
- Fix color interpolators (use scheme instead of range for d3 interpolators)
- Ensure all numeric values are properly parsed as floats/ints

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -5,8 +5,21 @@ section1Title = _lang(cis.section1Title)
 # `{ojs} section1Title` {#section1}
 
 ```{ojs}
-// Load CIS data from CSV (simpler and more reliable)
-cisData = await d3.csv("/data/cis/CIS_DATA.csv", d3.autoType)
+// Load CIS data from CSV with proper type conversion
+cisData = await d3.csv("/data/cis/CIS_DATA.csv", row => {
+  return {
+    ...row,
+    "weather-station_density": parseFloat(row["weather-station_density"]),
+    "cloud-coverage_meanannual": parseFloat(row["cloud-coverage_meanannual"]),
+    "cv-precipitation_agreement": parseFloat(row["cv-precipitation_agreement"]),
+    "short-term_frcst_skill": parseFloat(row["short-term_frcst_skill"]),
+    "seasonal_frcst_skill": parseFloat(row["seasonal_frcst_skill"]),
+    "cis_readiness_index": parseFloat(row["cis_readiness_index"]),
+    gaul0_code: parseInt(row.gaul0_code),
+    gaul1_code: parseInt(row.gaul1_code),
+    gaul2_code: parseInt(row.gaul2_code)
+  };
+})
 ```
 
 ```{ojs}
@@ -145,9 +158,7 @@ uniqueAdmin2 = (admin0Selection, admin1Selection) => {
 ```
 
 ```{ojs}
-// Import multi-select component (only once for the entire section)
-import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs"
-import { downloadButton } from "/helpers/uiComponents.ojs"
+// Display dropdown CSS (imports are in parent file to avoid duplication)
 dropdownCSS
 ```
 
@@ -318,12 +329,18 @@ s11MapData = {
           width: width / 2,
           height: height,
           projection: {type: "mercator", domain: s11MapData},
-          color: {
-            type: useRaw ? "linear" : "categorical",
-            domain: useRaw ? [0, 1] : ["Weaker", "Moderate", "Stronger"],
-            range: useRaw ? d3.interpolateYlGnBu : ["#fee5d9", "#fcae91", "#fb6a4a"],
+          color: useRaw ? {
+            type: "linear",
+            domain: [0, 1],
+            scheme: "YlGnBu",
             legend: true,
-            label: useRaw ? "Density (0-1)" : "Classification"
+            label: "Density (0-1)"
+          } : {
+            type: "categorical",
+            domain: ["Weaker", "Moderate", "Stronger"],
+            range: ["#fee5d9", "#fcae91", "#fb6a4a"],
+            legend: true,
+            label: "Classification"
           },
           marks: [
             Plot.geo(s11MapData, {
@@ -343,12 +360,18 @@ s11MapData = {
           width: width / 2,
           height: height,
           projection: {type: "mercator", domain: s11MapData},
-          color: {
-            type: useRaw ? "linear" : "categorical",
-            domain: useRaw ? [0, 1] : ["Weaker", "Moderate", "Stronger"],
-            range: useRaw ? d3.interpolateYlGnBu : ["#fee5d9", "#fcae91", "#fb6a4a"],
+          color: useRaw ? {
+            type: "linear",
+            domain: [0, 1],
+            scheme: "YlGnBu",
             legend: true,
-            label: useRaw ? "Coverage (0-1)" : "Classification"
+            label: "Coverage (0-1)"
+          } : {
+            type: "categorical",
+            domain: ["Weaker", "Moderate", "Stronger"],
+            range: ["#fee5d9", "#fcae91", "#fb6a4a"],
+            legend: true,
+            label: "Classification"
           },
           marks: [
             Plot.geo(s11MapData, {
@@ -472,12 +495,18 @@ s12MapData = {
       width: 2000,
       height: 1000,
       projection: {type: "mercator", domain: s12MapData},
-      color: {
-        type: useRaw ? "linear" : "categorical",
-        domain: useRaw ? [0, 4] : ["No agreement (Very Low)", "Partial agreement (Moderate)", "High agreement (High)", "Full agreement (Very High)"],
-        range: useRaw ? d3.interpolateViridis : ["#fee5d9", "#fcae91", "#fb6a4a", "#a50f15"],
+      color: useRaw ? {
+        type: "linear",
+        domain: [0, 4],
+        scheme: "Viridis",
         legend: true,
-        label: useRaw ? "Agreement (0-4)" : "Classification"
+        label: "Agreement (0-4)"
+      } : {
+        type: "categorical",
+        domain: ["No agreement (Very Low)", "Partial agreement (Moderate)", "High agreement (High)", "Full agreement (Very High)"],
+        range: ["#fee5d9", "#fcae91", "#fb6a4a", "#a50f15"],
+        legend: true,
+        label: "Classification"
       },
       marks: [
         Plot.geo(s12MapData, {
@@ -755,7 +784,7 @@ s14MapData = {
       color: {
         type: "linear",
         domain: [0, 1],
-        range: d3.interpolateRdYlGn,
+        scheme: "RdYlGn",
         legend: true,
         label: "CIS Readiness Index (0-1)"
       },
@@ -828,7 +857,7 @@ s14MapData = {
       color: {
         type: "linear",
         domain: [0, 1],
-        range: d3.interpolateRdYlGn,
+        scheme: "RdYlGn",
         legend: true,
         label: "Value (0-1)"
       },
