--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -11,8 +11,9 @@ date-edited: today
 ---
 
 ```{ojs}
-import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs";
-
+// Import all UI components at once to avoid duplication
+import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
+import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
 
 hero_url = "./../../images/default_crop.webp";
 cis = await FileAttachment(
